# template-api

./: .env.sample  .genignore  Cargo.toml  cargo-generate.toml  readme.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/pouet/: mod.rs  pouet_component.rs  pouet_dbo.rs  pouet_event_mongo_repository.rs  pouet_mongo_dao.rs  pouet_mongo_repository.rs
src/api/pouet/mappers/: events.rs  mod.rs  states.rs
src/api/pouet/query/: mod.rs
src/api/pouet/routes/: exemple_wit_api_key_routes.rs  mod.rs  read_routes.rs  write_routes.rs
src/api/pouet/services/: mod.rs  rules.rs
src/api/swagger/: mod.rs
src/api/{{aggregate_name}}/: mod.rs  {{aggregate_name}}_component.rs  {{aggregate_name}}_dbo.rs  {{aggregate_name}}_event_mongo_repository.rs  {{aggregate_name}}_mongo_dao.rs  {{aggregate_name}}_mongo_repository.rs
src/api/{{aggregate_name}}/mappers/: events.rs  mod.rs  states.rs
src/api/{{aggregate_name}}/query/: mod.rs
src/api/{{aggregate_name}}/routes/: read_routes.rs  write_routes.rs
src/api/{{aggregate_name}}/services/: mod.rs  rules.rs
src/core/: mod.rs
src/core/helpers/: mod.rs
src/core/helpers/context/: mod.rs
src/core/helpers/resulterr/: mod.rs
src/core/pouet/command_handler/: create_handler.rs
src/core/pouet/data/: mod.rs
src/core/pouet/reducer/: mod.rs
src/core/pouet/repositories/: mod.rs
src/core/pouet/services/: mod.rs  rules.rs
src/core/{{aggregate_name}}/: mod.rs
src/core/{{aggregate_name}}/command_handler/: create_handler.rs  mod.rs
src/models/: mod.rs
src/models/{{aggregate_name}}/: mod.rs
(+14 files in other folders)
